--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -210,6 +210,15 @@ header {
   margin-top: 20px;
 }
 
+.logo-black { 
+  display: none;
+  height: 50px;
+  width: auto;
+  float: left;
+  margin-top: 5px 0;
+}
+
+/* Main Nav */
 .main-nav {
   float: right;
   list-style: none;
@@ -227,8 +236,8 @@ header {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 90%
-  border-bottom 2px solid transparent;
+  font-size: 90%;
+  border-bottom: 2px solid transparent;
   -webkit-transition: border-bottom 0.2s;
   transition: border-bottom 0.2s;
 }
@@ -237,6 +246,31 @@ header {
 .main-nav li a:active {
   border-bottom: 2px solid #e67e22;
 }
+
+/* Sticky Nav */
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+  box-shadow: 0 2px 2px #efefef;
+  transition: 2s;
+  z-index: 9999;
+}
+
+.sticky .main-nav {
+  margin-top: 15px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+  padding: 15px 0;
+  color: #555;
+}
+
+.sticky .logo { display: none; }
+.sticky .logo-black { display: block; }
 
 /* ---------------------------------------------- */
 /* FEATURES */
